Update StringUtils.java