@@ -3,7 +3,10 @@ package com.liu.util.string;
 import com.alibaba.fastjson.JSONArray;
 import com.alibaba.fastjson.JSONObject;
 import com.liu.util.date.DateUtils;
-import sun.misc.BASE64Decoder;
+//import sun.misc.BASE64Decoder;
+import java.util.Base64
+import java.util.Base64.Encoder;
+import java.util.Base64.Decoder;
 
 import java.io.Serializable;
 import java.io.UnsupportedEncodingException;
@@ -185,7 +188,8 @@ public class StringUtils{
 	 */
     public static String getBASE64(String str,boolean...bf) {
        if (StringUtils.isBlank(str)) return null;
-       String base64 = new sun.misc.BASE64Decoder().encode(str.getBytes()) ;
+       //String base64 = new java.util.Base64.Decoder().encode(str.getBytes()) ;
+	   String base64 = Base64.getEncoder().encodeToString(str.getBytes())
        //去掉 '='
        if(isBlank(bf) && bf[0]){
     	   base64 = base64.replaceAll("=", "");
@@ -196,9 +200,10 @@ public class StringUtils{
     /** 将 BASE64 编码的字符串 s 进行解码**/
     public static String getStrByBASE64(String s) {
        if (isBlank(s)) return "";
-       BASE64Decoder decoder = new BASE64Decoder();
+       //BASE64Decoder decoder = new BASE64Decoder();
+          Decoder decoder=Base64.getMimeDecoder()
        try {
-          byte[] b = decoder.decodeBuffer(s);
+          byte[] b = decoder.decode(s);
           return new String(b);
        } catch (Exception e) {
           return "";
